--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,23 @@
-"<!-- index.html: Mario Kart -->" 
+<!-- index.html: Mario Kart -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="master.css">
+    <meta charset="utf-8">
+    <title>Mario Kart: A NodeJS Project</title>
+  </head>
+  <body>
+    <div id="Characters">
+      <h2>Characters:</h2><br>
+      <div class="color black"></div>
+      <div class="color red"></div>
+      <div class="color green"></div>
+      <div class="color blue"></div>
+      <div class="color yellow"></div>
+    </div>
+
+    <canvas id="stage" width="750" height="750"></canvas>
+    <script type="text/javascript" src='main.js'>
+    </script>
+  </body>
+</html>
