--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <canvas id="stage" width="750" height="750"></canvas>
-    <script type="text/javascript" src='main.js'>
-    </script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src='main.js'></script>
   </body>
 </html>
