Nouvel Algorithme de calcul de vitesse

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       <div class="color blue"></div>
       <div class="color yellow"></div>
     </div>
-
+    <div id="HUD">
+    </div>
     <canvas id="stage" width="750" height="750"></canvas>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src='main.js'></script>
