--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,15 @@
   </head>
   <body>
     <div id="Characters">
-      <h2>Characters:</h2><br>
+      <h2>Characters:</h2>
       <div class="color black"></div>
       <div class="color red"></div>
       <div class="color green"></div>
       <div class="color blue"></div>
       <div class="color yellow"></div>
     </div>
-    <div id="HUD">
+    <div id="hud">
+      <h2>LIFE</h2>
     </div>
     <canvas id="stage" width="750" height="750"></canvas>
     <script src="/socket.io/socket.io.js"></script>
