--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,14 @@
       <div class="color yellow"></div>
     </div>
     <div id="hud">
-      <h2>LIFE</h2>
+      <h2>Player1</h2><br><br>
+      <img class="lifep1" src="heart.png" width="50px" height="50px"></img>
+      <img class="lifep1" src="heart.png" width="50px" height="50px"></img>
+      <img class="lifep1" src="heart.png" width="50px" height="50px"></img>
+      <h2>Player2</h2><br><br>
+      <img class="lifep2" src="heart.png" width="50px" height="50px"></img>
+      <img class="lifep2" src="heart.png" width="50px" height="50px"></img>
+      <img class="lifep2" src="heart.png" width="50px" height="50px"></img>
     </div>
     <canvas id="stage" width="750" height="750"></canvas>
     <script src="/socket.io/socket.io.js"></script>
