--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       <img class="lifep2" src="heart.png" width="50px" height="50px"></img>
       <img class="lifep2" src="heart.png" width="50px" height="50px"></img>
     </div>
+    <div id="win">
+      win
+    </div>
     <canvas id="stage" width="750" height="750"></canvas>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src='main.js'></script>
