--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       <img class="lifep2" src="heart.png" width="50px" height="50px"></img>
     </div>
     <div id="win">
-      win
+      WIN
     </div>
     <canvas id="stage" width="750" height="750"></canvas>
     <script src="/socket.io/socket.io.js"></script>
